@@ -6,30 +6,62 @@
   <script type="text/javascript" src="BlobBuilder.min.js"></script>
   <script type="text/javascript" src="FileSaver.min.js"></script>
   <script type="text/javascript" src="blockly_helper.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
   <script>
-  function load_by_url(arg_url) {
-    $.ajax({
-    url:arg_url,
-    type:"GET",
-    cache:false,
-    dataType:"text",
-    success: function(msg){
-      //console.log(msg);
+  var ajax;
+
+  function createAJAX() {
+    if (window.ActiveXObject) { //IE
       try {
-        var xml = Blockly.Xml.textToDom(msg);
+        return new ActiveXObject("Msxml2.XMLHTTP");
       } catch (e) {
-        alert('Error parsing XML:\n' + e);
-        return;
+        try {
+          return new ActiveXObject("Microsoft.XMLHTTP");
+        } catch (e2) {
+          return null;
+        }
       }
-      var count = Blockly.mainWorkspace.getAllBlocks().length;
-      if (count && confirm('Replace existing blocks?\n"Cancel" will merge.')) {
-        Blockly.mainWorkspace.clear();
-      }
-      Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml);
+    } else if (window.XMLHttpRequest) {
+      return new XMLHttpRequest();
+    } else {
+      return null;
     }
-    });
   }
+
+  function onSuccess () {
+    if (ajax.readyState == 4) {
+      if (ajax.status == 200) {
+        try {
+        var xml = Blockly.Xml.textToDom(ajax.responseText);
+        } catch (e) {
+          alert('Error parsing XML:\n' + e);
+          return;
+        }
+        var count = Blockly.mainWorkspace.getAllBlocks().length;
+        if (count && confirm('Replace existing blocks?\n"Cancel" will merge.')) {
+          Blockly.mainWorkspace.clear();
+        }
+        Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml);
+      } else {
+        alert("Server error");
+      }
+    }
+  }
+
+  function load_by_url(uri) {
+    ajax = createAJAX();
+    if (!ajax) {
+　　   alert ('Not compatible with XMLHttpRequest');
+　　   return 0;
+　  }
+    if (ajax.overrideMimeType) {
+      ajax.overrideMimeType('text/xml');
+    }
+
+　　ajax.onreadystatechange = onSuccess;
+　　ajax.open ("GET", uri, true);
+　　ajax.send ("");
+  }
+
   // Whitelist of blocks to keep.
   /*var newLanguage = {}
   var keepers = ['controls_loop', 'controls_delay', 'control_map',
@@ -224,7 +256,8 @@ function init(blockly) {
       padding: 0;
     }
     pre,
-    #content_xml,#content_arduino {
+    #content_xml,
+    #content_arduino {
       width: 100%;
       height: 100%;
       padding: 0;
@@ -234,7 +267,8 @@ function init(blockly) {
       overflow: hidden;
       display: none;
     }
-    #textarea_xml,#textarea_arduino {
+    #textarea_xml,
+    #textarea_arduino {
       width: 100%;
       height: 100%;
       border: none;
